[project]
name = "flask-ldap3-login"
dynamic = ["version"]
description = "LDAP Support for Flask"
authors = [
    {name = "Nick Whyte", email = "nick@nickwhyte.com"},
]
dependencies = [
    "Flask",
    "Flask-wtf",
    "WTForms>=1.0.2",
    "ldap3>=2.0.7",
]
requires-python = ">=3.5"
readme = "README.rst"
license = {text = "MIT"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]


[project.urls]
Homepage = "https://github.com/nickw444/flask-ldap3-login"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flask_ldap3_login"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
command_line = "-m unittest -v"
